# models/order.go
@@ -1,7 +1,8 @@
 package models
 
 type Order struct {
-	ID     int `gorm:"primaryKey" json:"order_id"`
-	UserID int `json:"user_id"`
-	Products  []OrderProduct  `gorm:"foreignKey:OrderID" json:"products"`
+	ID       int            `gorm:"primaryKey" json:"order_id"`
+	UserID   int            `json:"user_id"`
+	Products []OrderProduct `gorm:"foreignKey:OrderID" json:"products"`
+	User     User           `json:"user" gorm:"foreignKey:UserID"`
 }
